--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Screen6"></activity>
+        <activity android:name=".Victim_6"></activity>
+        <activity android:name=".Screen6" />
         <activity android:name=".FinalF2" />
         <activity android:name=".Victim_5" />
         <activity android:name=".Victim_4" />
