--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GeneralCitizen"></activity>
+        <activity android:name=".breathlessness"></activity>
+        <activity android:name=".unconciousness" />
+        <activity android:name=".GeneralCitizen" />
         <activity android:name=".maps" />
         <activity android:name=".final_f3" />
         <activity android:name=".weight" />
